<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Sing_in">


    <TextView
        android:id="@+id/title"
        android:layout_width="334dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/Title"
        android:textColor="#B10101"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="37dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:imeActionLabel="@string/name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#B10101"
        android:textColorHint="#BA0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_email"
        android:textColorHint="#BA0000"
        android:textColor="#B10101"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:textColor="#B10101"
        android:textColorHint="#BA0000"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <TextView
        android:id="@+id/cuenta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_cuenta"
        android:textColor="#B10101"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="585dp" />

    <Button
        android:id="@+id/sing_in2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="#B10101"
        android:enabled="false"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.872" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="339dp"
        android:layout_height="212dp"
        app:srcCompat="@drawable/ojo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>