<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Login">


    <TextView
        android:id="@+id/title"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:textColor="#B10101"
        android:text="@string/iniciosesion"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:hint="@string/prompt_email"
        android:textColorHint="#BA0000"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="329dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:textColorHint="#BA0000"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Recuperar"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/Recuperar"
        android:textColor="#B10101"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Crear"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/Crear"
        android:textAlignment="center"
        android:textColor="#B10101"
        app:layout_constraintStart_toEndOf="@+id/Recuperar"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#B10101"
        android:text="@string/iniciosesion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.636" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="417dp"
        android:layout_height="159dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>